# qr-encode

./: .gitignore  Cargo.toml  package-lock.json  qr.py  readme.md
src/: lib.rs  main.rs
src/grid/: bit.rs  cell.rs  grid.rs  image.rs  message.rs  mod.rs  qr_opts.rs  traverse.rs  util.rs
src/qr_encoder/: area.rs  cell.rs  config.rs  cursor.rs  mod.rs  position.rs  qr.rs  util.rs
