[package]
name = "qr-encode"
version = "0.1.4"
authors = ["Matt Long <matthewhl@gmail.com>"]
license = "MIT"
description = "A simple CLI QR Code generator"

[lib]
name = "qr_encode"

[[bin]]
name = "qr-encode"

[dependencies]
image = "0.19.0"
reed-solomon = { git = "https://github.com/wismer/reed-solomon-rs" }
num = "0.1.42"
