[package]
name = "qr-encode"
version = "0.1.4"
authors = ["Matt Long <matthewhl@gmail.com>"]
license = "MIT"
description = "A simple CLI QR Code generator"

[lib]
name = "qr_encode"

[[bin]]
name = "qr-encode"

[dependencies]
image = "0.19.0"
reed-solomon = { path = "reed-solomon-rs", version = "0.2.1" }
num = "0.1.42"
